# creative-coding-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
architecture/: README.md  artifact_intelligence_graph.md  artifact_intelligence_graph.mmd  artifact_preview_runtime.md  artifact_preview_runtime.mmd  creative_intelligence_graph.md  creative_intelligence_graph.mmd  creative_knowledge_distillation.md  demo_showcase_experience.md  end_to_end_product_workflow.md  end_to_end_product_workflow.mmd  engine_matrix.md  error_and_recovery_paths.md  evaluation_workflow.md  evaluation_workflow.mmd  generative_design_graph.md  generative_design_graph.mmd  hologenesis_core.md  immersive_audiovisual_composer.md  multi_agent_roles.md  mythopoetic_narrative_engine.md  sacred_architecture_engine.md  sacred_geometry_engine.md  symbolic_translation_engine.md  system_architecture_overview.md  system_architecture_overview.mmd  workflow_graph.md  workflow_graph.mmd  workstation_surface_graph.md  workstation_surface_graph.mmd
codex_starter_pack/: README.md
demo/: README.md  demo_prompt_library.md  final_demo_launcher.html  final_demo_suite.json  golden_demo_dataset.json  manual_demo_checklist.md  showcase_upload_preparation.md  v9_5_exact_prompt_library.md  v9_5_golden_demo_dataset.json  v9_5_manual_checklist.md  v9_5_presenter_notes.md
docs/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_WALKTHROUGH.md  CAPABILITY_MATRIX.md  CAPSTONE_DEMO_SHOWCASE.md  CAPSTONE_EVALUATION_ETHICS.md  CHALLENGES_AND_LESSONS.md  CODEX_FEATURE_PROMPT_TEMPLATE.md  CODEX_FIRST_TASK_PROMPT.md  CODEX_MASTER_PROMPT.md  COMMIT_HISTORY_AUDIT.md  COMMIT_RULES.md  CONFIGURATION_GUIDE.md  DATA_AND_KB.md  DEMO_NARRATIVE.md  DOMAIN_EXPERIENCE.md  ETHICS_PRIVACY_ASSESSMENT.md  EVALUATION_CRITERIA_MAPPING.md  EVALUATION_METRICS_SUMMARY.md  FAQ.md  FEATURE_TEMPLATE.md  FINAL_PRODUCT_POLISH_ROADMAP.md  FIRST_RUN_CHECKLIST.md  FIVE_MINUTE_QA.md  FUTURE_WORK.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION_GUIDE.md  MULTI_LENS_EVALUATION.md  ORCHESTRATION_PACKAGE_BOUNDARIES.md  PORTFOLIO_CASE_STUDY.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_QUALITY_CHECKLIST.md  PROJECT_CONTEXT.md  PUBLIC_DOCUMENTATION_BOUNDARY_AUDIT.md  REPOSITORY_HYGIENE_AUDIT.md  REVIEWER_GUIDE.md  RUNTIME_VALIDATION.md  SCR_PRESENTATION.md  SMART_PRESENTATION.md  SYSTEM_OVERVIEW.md  (+14 more)
(+1752 files in other folders)
