[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-coding-assistant"
version = "0.1.0"
description = "AI-native creative coding workstation with a Python backend and Next.js client."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.2.2",
  "chromadb>=0.6.3,<1.0.0",
  "jinja2>=3.1",
  "langgraph>=1.1",
  "loguru>=0.7",
  "openai>=1.0",
  "pydantic>=2.11",
  "pydantic-settings>=2.9",
  "streamlit>=1.44",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]
server = [
  "gunicorn>=22,<24",
]
evaluation = [
  "langchain-openai>=1.2,<2",
  "ragas>=0.4.3,<0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["creative_coding_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
  ".git",
  ".idea",
  ".runtime_pack",
  ".venv",
  "data",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "clients", "scripts"]
exclude = [
  ".git",
  ".idea",
  ".runtime_pack",
  ".venv",
  "data/chroma",
  "data/artifacts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
